fix: troca de gaps nos botões

--- a/src/app/components/popup.scss
+++ b/src/app/components/popup.scss
@@ -56,7 +56,7 @@
         .popup-buttons {
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 16px;
         }
     }
 
